[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-net = "0.1"
gloo-timers = "0.2"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "0.3", features = ["MutationObserver", "MutationObserverInit", "MutationRecord"] }
chrono = "0.4"
js-sys = "0.3"  
pulldown-cmark = "0.9"
html-escape = "0.2"  
rand = "0.8" 